--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ button:active {
     inset 3px 3px 5px rgba(94, 104, 121, 0.288);
 }
 
-.losuj {
+#container {
   margin: auto;
   margin-top: 50px;
   display: flex;
@@ -53,6 +53,9 @@ button:active {
 
 .poleLiczbowe span {
   background-color: #dde1e7;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: #777;
   font-weight: bold;
   font-size: 25px;
@@ -66,11 +69,9 @@ button:active {
   border-radius: 50%;
   box-shadow: -3px -3px 7px #ffffff73, 3px 3px 5px rgba(94, 104, 121, 0.288);
   text-align: center;
-  display: grid;
-  place-items: center;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 1000px) {
   button {
     font-size: 20px;
     padding: 10px;
