--- a/style.css
+++ b/style.css
@@ -1,11 +1,25 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap");
+
 body {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
   background-color: #dde1e7;
-  justify-content: center;
   font-family: "Lato", sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 0;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: auto;
+  margin-top: 50px;
+}
+
+.btn-los {
+  display: flex;
+  justify-content: center;
 }
 
 button {
@@ -13,11 +27,11 @@ button {
   color: #777;
   font-weight: 700;
   font-size: 25px;
-  padding: 20px;
+  padding: 10px;
   margin-bottom: 25px;
   border: none;
   outline: none;
-  border-radius: 20px;
+  border-radius: 10px;
   box-shadow: -3px -3px 7px #ffffff73, 3px 3px 5px rgba(94, 104, 121, 0.288);
 }
 
@@ -29,7 +43,7 @@ button:active {
   color: #777;
   font-weight: bold;
   font-size: 25px;
-  padding: 20px;
+  padding: 10px;
   border: none;
   outline: none;
   border-radius: 20px;
@@ -37,7 +51,7 @@ button:active {
     inset 3px 3px 5px rgba(94, 104, 121, 0.288);
 }
 
-.reset {
+.reset button {
   margin: auto;
   margin-top: 25px;
   display: flex;
@@ -46,65 +60,38 @@ button:active {
   flex-direction: column;
   text-align: center;
   max-width: 100px;
+  font-size: 16px;
+  padding: 10px;
+  color: #777;
 }
 
 .active {
   display: none;
-  color: red;
 }
 
-#container {
-  margin: auto;
-  margin-top: 50px;
-  display: flex;
-  text-align: center;
-  justify-content: center;
-  flex-direction: column;
-}
-
-.poleLiczbowe {
-  margin: auto;
-  display: flex;
-  font-size: 20px;
-}
-
-.poleLiczbowe span {
-  background-color: #dde1e7;
+.spanel {
   display: flex;
   justify-content: center;
-  align-items: center;
+  margin: auto;
+  width: 100%;
+}
+
+.spanel span {
   color: #777;
-  font-weight: bold;
-  font-size: 25px;
-  height: 50px;
-  width: 50px;
-  padding: 20px;
-  margin: 25px;
-  margin-top: 50px;
-  border: none;
-  outline: none;
-  border-radius: 50%;
+  display: grid;
+  place-items: center;
   box-shadow: -3px -3px 7px #ffffff73, 3px 3px 5px rgba(94, 104, 121, 0.288);
   text-align: center;
+  background-color: #dde1e7;
+  height: 25px;
+  width: 25px;
+  border-radius: 50%;
+  margin: 5px;
+  padding: 10px;
 }
 
-@media (max-width: 1000px) {
-  button {
-    font-size: 20px;
-    padding: 10px;
-    margin-bottom: 50px;
-  }
-  button:active {
-    font-size: 20px;
-    padding: 10px;
-    margin-bottom: 50px;
-  }
-
-  .poleLiczbowe span {
-    height: 15px;
-    width: 15px;
-    padding: 10px;
-    margin: 10px;
-    font-size: 16px;
+@media (min-width: 1000px) {
+  .spanel span {
+    font-size: 22px;
   }
 }
