--- a/style.css
+++ b/style.css
@@ -70,6 +70,10 @@ button:active {
   display: none;
 }
 
+.numbers .spanel {
+  margin: 25px 0;
+}
+
 .spanel {
   display: flex;
   justify-content: center;
