--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
   justify-content: center;
   margin: auto;
   margin-top: 25px;
+  width: 20rem;
 }
 
 .btn-los {
@@ -25,6 +26,7 @@ body {
 
 button {
   background-color: #dde1e7;
+  width: 100%;
   color: #777;
   font-weight: 700;
   font-size: 25px;
