--- a/style.css
+++ b/style.css
@@ -18,6 +18,12 @@ body {
   width: 20rem;
 }
 
+img {
+  width: 50%;
+  object-fit: cover;
+  margin: auto;
+}
+
 .btn-los {
   display: flex;
   flex-direction: column;
@@ -84,16 +90,23 @@ button:active {
   place-items: center;
   box-shadow: -3px -3px 7px #ffffff73, 3px 3px 5px rgba(94, 104, 121, 0.288);
   text-align: center;
+  font-weight: bold;
+  font-size: 22px;
   background-color: #dde1e7;
   height: 25px;
   width: 25px;
   border-radius: 50%;
   margin: 5px;
-  padding: 10px;
+  padding: 15px;
 }
 
 @media (min-width: 1000px) {
   .spanel span {
     font-size: 22px;
+    padding: 15px;
+  }
+
+  img {
+    width: 100%;
   }
 }
