--- a/style.css
+++ b/style.css
@@ -9,6 +9,30 @@ body {
   margin: 0;
 }
 
+.navbar {
+  display: flex;
+  color: #777;
+  background-color: #f5f5f5;
+  justify-content: space-between;
+  padding: 0 35px;
+}
+
+.navbar ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.navbar li {
+  margin: auto;
+}
+
+.navbar ul li a {
+  text-decoration: none;
+  color: #777;
+  font-weight: bold;
+  font-size: 20px;
+}
+
 .container {
   display: flex;
   flex-direction: column;
