--- a/style.css
+++ b/style.css
@@ -86,8 +86,7 @@ button:active {
     inset 3px 3px 5px rgba(94, 104, 121, 0.288);
 }
 
-.reset button,
-button.btnCopy {
+.reset button {
   margin: auto;
   margin-top: 25px;
   display: flex;
@@ -96,7 +95,8 @@ button.btnCopy {
   flex-direction: column;
   text-align: center;
   max-width: 100px;
-  font-size: 16px;
+  font-size: 18px;
+
   padding: 10px;
   color: #777;
 }
@@ -110,6 +110,15 @@ button.btnCopy {
   justify-content: center;
   margin: auto;
   width: 100%;
+  border-radius: 15px;
+  padding: 5px;
+  margin: 10px auto;
+}
+
+.numbersEuro {
+  display: none;
+  border: 1px solid rgba(0, 0, 1, 0.2);
+  border-radius: 15px;
 }
 
 .spanel span {
