--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@ body {
 .navbar ul {
   list-style-type: none;
   padding: 0;
+  display: flex;
+  align-items: center;
 }
 
 .navbar li {
@@ -43,13 +45,20 @@ body {
   -webkit-text-fill-color: transparent;
 }
 
-.date {
-  text-align: center;
+#fullDate {
+  text-align: right;
+  display: flex;
+  flex-direction: column;
+  margin-right: 5px;
+}
+
+#dayOfTheWeek,
+#date {
+  font-size: 14px;
 }
 
 #hour {
-  font-size: 22px;
-  margin-top: 2px;
+  font-size: 35px;
   color: #777;
 }
 
